[metadata]
name = dir_watcher
version = 1.0.0
author = Bryan C Bush
author_email = bbushvt@gmail.com
description = Package for watching a directory tree and issuing callbacks on each file in that directory tree
long_description = file: README.metadata
long_description_content_type = text/markdown
url = https://github.com/bbushvt/dir_watcher
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_required = >= 3.0
